--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  background: url("/public/static/background.png"); 
-
+  background: url("/static/background.png");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  color: pink;
+  color: #373b64;
   height: 100%;
 }
+
+
 
 a {
   color: inherit;
@@ -21,6 +21,13 @@ a {
 
 * {
   box-sizing: border-box;
+  /* background: url("/static/background.png"); 
+
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: pink;
+  height: 100%; */
 }
 
 @media (prefers-color-scheme: dark) {
