--- a/components/banner.module.css
+++ b/components/banner.module.css
@@ -1,3 +1,51 @@
-.title{
- color: red;
+.container{
+    margin-bottom: 6rem;
+}
+
+.title {
+    letter-spacing: -0.025rem;
+    font-weight: 800;
+    color: var(--text-black);
+
+    font-size: 3rem;
+    line-height: 1;
+}
+
+.title1 {
+    color: white;
+}
+
+.title2 {
+    display: block;
+    color: var(--text-purple);
+}
+
+.subTitle {
+    margin-top: 0.75rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: var(--text-white-100)
+}
+
+.buttonWrapper {
+    margin-top: 1.25rem;
+}
+
+.button{
+    background-color: var(text--purple-dark);
+    cursor: pointer;
+    color: white;
+    outline: 0;
+    border: 0px;
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+}
+
+.button:hover {
+    background-color: var(--text-purple-dark);
 }
