--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,13 +21,13 @@ a {
 
 * {
   box-sizing: border-box;
-  /* background: url("/static/background.png"); 
+}
 
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: pink;
-  height: 100%; */
+:root{
+  --text-purple: rgba(67, 56, 202, 1);
+  --text-purple-dark: rgba(79, 70, 229, 1);
+  --text-black: rgba(17, 24, 39, 1);
+  --text-white-100: rgba(229, 231, 235, 5);
 }
 
 @media (prefers-color-scheme: dark) {
