adjusted the hero image place

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,7 +15,11 @@
   padding-right: 1rem /* 16px */;
 }
 
-
+.heroImage {
+  position: absolute;
+  top : 0px;
+  z-index: 1; 
+}
 
 /** Breakpoints:
   sm: min-width: 640px;
@@ -47,6 +51,10 @@
   .main {
     margin-top: 4rem /* 64px */;
   }
+
+  .heroImage {
+    right: 20%;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -58,5 +66,8 @@
     margin-top: 5rem /* 80px */;
     padding-left: 2rem /* 32px */;
     padding-right: 2rem /* 32px */;
+  }
+  .heroImage {
+    right: 20%;
   }
 }
