--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,6 +21,18 @@
   z-index: 1; 
 }
 
+.cardLayout{
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
+}
+
+.card {
+  justify-content: center;
+}
+
+
 /** Breakpoints:
   sm: min-width: 640px;
   md: min-width: 768px;
@@ -40,6 +52,9 @@
     padding-left: 1.5rem /* 24px */;
     padding-right: 1.5rem /* 24px */;
   }
+  .cardLayout{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px) {
@@ -50,6 +65,9 @@
 
   .main {
     margin-top: 4rem /* 64px */;
+  }
+  .cardLayout{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .heroImage {
@@ -67,7 +85,19 @@
     padding-left: 2rem /* 32px */;
     padding-right: 2rem /* 32px */;
   }
+  .cardLayout{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .heroImage {
     right: 20%;
+  }
+
+  @media (min-width: 1280px) {
+    .main{
+      margin-top: 7rem;
+    }
+    .cardLayout{
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
   }
 }
